--- a/02_レシピ/01_3の倍数/index.html
+++ b/02_レシピ/01_3の倍数/index.html
@@ -2,3 +2,16 @@
   1. "!"と入力して、tabキーを押し、HTMLの雛形を作成する。
   2. script要素でmain.jsを読み込む。
 -->
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewpoirt" content="width=device-width,initial-scale" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>MultipleOfThree</title>
+  </head>
+
+  <body>
+    <script src="main.js"></script>
+  </body>
+</html>
