これまでの学習

--- a/01_テキスト/04_Vueの基礎/index.html
+++ b/01_テキスト/04_Vueの基礎/index.html
@@ -9,6 +9,10 @@
     <h1>Vueの基礎</h1>
     <!-- ↓ここに追加する -->
 
+    <div id="app">
+      <div>{{count}}</div>
+      <button v-on:click="countUp">+1</button>
+    </div>
     <script src="https://unpkg.com/vue@next"></script>
     <script src="main.js"></script>
   </body>
